- Change `max_unzipped_size` default from 50mb to 30mb {pull}731[731].
- Change `read_timeout` and `write_timeout` defaults from 2s to 30s {pull}748[748], {pull}752[752].
- Limit number of new connections to accept simultaneously {pull}751[751].
- Push spans to separate ES index {pull}774[774].
- Update Go to 1.9.4 {pull}786[786].
- Adjust in-memory queue defaults {pull}791[791].


==== Deprecated

==== Known Issues




=== APM Server version 6.2
https://github.com/elastic/apm-server/compare/71df0d96445df35afe27f38bcf734a0828e0761d\...4daa36bd5c144cf9182afc62dc8042af663756c6[View commits]

==== Breaking changes
- Renaming and reverse boolean `in_app` to `library_frame` {pull}385[385].
- Renaming `app` to `service` {pull}377[377]
- Move `trace.transaction_id` to `transaction.id` {pull}345[345], {pull}347[347], {pull}371[371]
- Renaming `trace` to `span` {pull}352[352].
- Renaming and reverse boolean `exception.uncaught` to `exception.handled` {pull}434[434].
- Move process related fields to their own namespace {pull}445[445].
- Rename Kibana directories according to changed structure in beats framework. {pull}454[454]
- Change config option `max_header_bytes` to `max_header_size` {pull}492[492].

==== Bug fixes
- Updated systemd doc url {pull}354[354]
- Updated readme doc urls {pull}356[356]
- Use updated stack trace frame values for calculating error `grouping_keys` {pull}485[485]
- Fix panic when a signal is delivered before the server is instantiated {pull}580[580]

==== Added
- Include build time and revision in version information {pull}396[396]
- service.environment {pull}366[366]
- Consider exception or log message for grouping key when nothing else is available {pull}435[435]
- Add context.request.url.full {pull}436[436]
- Report more detail on max data size error {pull}442[442]
- Increase default 'MaxUnzippedSize' from 10mb to 50mb {pull}439[439]
- Add transaction.id to errors {pull}437[437]
- Support for uploading sourcemaps {pull}302[302].